objects/Pairing_Table__c.object
<CustomObject>
    <fields>
        <fullName>Image1_TechNode__c</fullName>
        <label>Image1 TechNode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image1__c</fullName>
        <label>Image1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image2_TechNode__c</fullName>
        <label>Image2 TechNode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image2__c</fullName>
        <label>Image2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image3_TechNode__c</fullName>
        <label>Image3 TechNode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image3__c</fullName>
        <label>Image3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mask_Set_Title_Text__c</fullName>
        <label>Mask Set Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mask_Set_Title__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mask Set Title</label>
        <referenceTo>Mask_Set_Title__c</referenceTo>
        <relationshipName>Pairing_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mask_Title__c</fullName>
        <externalId>true</externalId>
        <label>Mask_Title</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PRF_Number__c</fullName>
        <label>PRF Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Pairing Table</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Image1__c</columns>
        <columns>Image1_TechNode__c</columns>
        <columns>Image2__c</columns>
        <columns>Image2_TechNode__c</columns>
        <columns>Image3__c</columns>
        <columns>Image3_TechNode__c</columns>
        <columns>Image4__c</columns>
        <columns>Image4_TechNode__c</columns>
        <columns>Mask_Title__c</columns>
        <columns>Mask_Set_Title_Text__c</columns>
        <columns>Mask_Set_Title__c</columns>
        <columns>PRF_Number__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Swift_Filter</fullName>
        <columns>NAME</columns>
        <columns>Mask_Title__c</columns>
        <columns>Mask_Set_Title_Text__c</columns>
        <columns>Image1__c</columns>
        <columns>Image2__c</columns>
        <columns>Image3__c</columns>
        <columns>Image4__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Mask_Set_Title_Text__c</field>
            <operation>contains</operation>
            <value>N3XSTE9</value>
        </filters>
        <label>Swift Filter</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Pairing_Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pairing Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>